--- a/system2/src/LecStudentGrade.form
+++ b/system2/src/LecStudentGrade.form
@@ -30,15 +30,6 @@
               <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
-          <component id="874f8" class="javax.swing.JButton" binding="viewResultsButton" default-binding="true">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-13922170"/>
-              <text value="View Results"/>
-            </properties>
-          </component>
           <component id="717d0" class="javax.swing.JButton" binding="backButton" default-binding="true">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -47,14 +38,6 @@
               <background color="-13922170"/>
               <text value="Back"/>
             </properties>
-          </component>
-          <component id="238b5" class="javax.swing.JTable" binding="table1" default-binding="true">
-            <constraints>
-              <grid row="2" column="0" row-span="1" col-span="4" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
-              </grid>
-            </constraints>
-            <properties/>
           </component>
           <hspacer id="bec56">
             <constraints>
@@ -66,6 +49,28 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
+          <scrollpane id="376e7">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="4" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="8ed07" class="javax.swing.JTable" binding="table1" default-binding="true">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
+          </scrollpane>
+          <component id="874f8" class="javax.swing.JButton" binding="viewResultsButton" default-binding="true">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13922170"/>
+              <text value="View Results"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
