--- a/system2/src/Lecturdashbord.form
+++ b/system2/src/Lecturdashbord.form
@@ -37,17 +37,6 @@
                   <text value=""/>
                 </properties>
               </component>
-              <component id="31e66" class="javax.swing.JButton" binding="editProfileButton" default-binding="true">
-                <constraints>
-                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-13922170"/>
-                  <font name="Arial Black" size="14" style="1"/>
-                  <foreground color="-131073"/>
-                  <text value="Edit Profile"/>
-                </properties>
-              </component>
               <component id="f87a1" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
                 <constraints>
                   <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -86,6 +75,14 @@
                 <properties>
                   <background color="-13922170"/>
                   <foreground color="-13922170"/>
+                </properties>
+              </component>
+              <component id="9d57a" class="javax.swing.JButton" binding="editProfileButton" default-binding="true">
+                <constraints>
+                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Edit Profile"/>
                 </properties>
               </component>
             </children>
