--- a/system2/src/LecStudentDetails.form
+++ b/system2/src/LecStudentDetails.form
@@ -73,6 +73,19 @@
               <text value="Back"/>
             </properties>
           </component>
+          <scrollpane id="d85b2">
+            <constraints>
+              <grid row="2" column="1" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="c2065" class="javax.swing.JTable" binding="table1" default-binding="true">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
     </children>
