--- a/system2/src/LecMarks.form
+++ b/system2/src/LecMarks.form
@@ -14,7 +14,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-11711411"/>
+          <background color="-66049"/>
         </properties>
         <border type="none"/>
         <children>
@@ -25,12 +25,6 @@
             <properties>
               <text value="Select Student"/>
             </properties>
-          </component>
-          <component id="54307" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
           </component>
           <component id="442b6" class="javax.swing.JLabel">
             <constraints>
@@ -288,6 +282,14 @@
               <background color="-13922170"/>
               <text value="Back"/>
             </properties>
+          </component>
+          <component id="52587" class="javax.swing.JTextField" binding="textField10" default-binding="true">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
           </component>
         </children>
       </grid>
