--- a/system2/src/Lecturdashbord.form
+++ b/system2/src/Lecturdashbord.form
@@ -82,6 +82,10 @@
                   <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-13922170"/>
+                  <enabled value="true"/>
+                  <font name="Arial Black" size="14" style="1"/>
+                  <foreground color="-66049"/>
                   <text value="Edit Profile"/>
                 </properties>
               </component>
